# computer-graphics-learning

./: .gitignore  readme.md
Homework0/Assignment0/: CMakeLists.txt  main.cpp
Homework1/Assignment1/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework2/code_homework2/: CMakeLists.txt  Triangle.cpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/Assignment3/: CMakeLists.txt  Shader.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp
